update edit and list channel view

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -4,6 +4,10 @@ fr:
   channels: "chaînes"
   name: "Nom"
   channel_number: "Numéro"
-  enabled: "active"
+  active: "active"
   s_yes: "oui"
   s_no: "non"
+  actions: "actions"
+  show: "afficher"
+  edit: "editer"
+  edit_channel: "Edition de la chaîne : {{channel_name}}"
