initial commit for controller program.
List and show is ok

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,14 +1,24 @@
 fr:
   hello: "Bonjour le monde"
-  list_of: "liste de"
+  list_of: "Liste de"
   channels: "chaînes"
-  name: "Nom"
-  channel_number: "Numéro"
+  name: "nom"
+  channel_number: "numéro de chaîne"
   active: "active"
   s_yes: "oui"
   s_no: "non"
   actions: "actions"
   show: "afficher"
-  edit: "editer"
+  edit: "éditer"
   edit_channel: "Edition de la chaîne : {{channel_name}}"
+  edit_program: "Edition du programme : {{program_title}}"
+  show_program: "Détails du programme : {{program_title}}"
   back: "retour"
+  programs: "programmes"
+  description: "description"
+  start_time: "date de démarrage"
+  duration: "duration"
+  title: "titre"
+  input_source: "source"
+  repeats: "répétition"
+  quality: "qualité"
