--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -12,10 +12,10 @@ fr:
   show: "afficher"
   edit: "éditer"
   delete: supprimer
-  edit_channel: "Edition de la chaîne : {{channel_name}}"
-  edit_program: "Edition de la programmation : {{program_title}}"
-  show_program: "Détails de la programmation : {{program_title}}"
-  show_recording: "Détails de l'enregistrement : {{recording_title}}"
+  edit_channel: "Edition de la chaîne : %{channel_name}"
+  edit_program: "Edition de la programmation : %{program_title}"
+  show_program: "Détails de la programmation : %{program_title}"
+  show_recording: "Détails de l'enregistrement : %{recording_title}"
   back: "retour"
   programs: "programmations"
   description: "description"
@@ -29,17 +29,17 @@ fr:
   the_recording: "l'enregistrement"
   no_recordings: "Aucun enregistrement"
   no_programs: "Aucune programmation"
-  are_you_sure: "Etes-vous sûr de vouloir supprimer {{type}} '{{name}}'"
+  are_you_sure: "Etes-vous sûr de vouloir supprimer %{type} '%{name}'"
   episode: "épisode"
   busy: occupé
-  numbers_recordings: "Il y a {{count}} enregistrement(s)"
-  numbers_programs: "Il y a {{count}} programmation(s)"
-  numbers_channels: "Il y a {{count}} chaine(s)"
+  numbers_recordings: "Il y a %{count} enregistrement(s)"
+  numbers_programs: "Il y a %{count} programmation(s)"
+  numbers_channels: "Il y a %{count} chaine(s)"
   create_program: "création d'un nouveau programme"
   new_program: "nouveau programme"
   create_new_program: "créer une nouvelle programmtion"
-  program_in_conflict: "impossible de créer la nouvelle programmation, elle rentre en conflit avec {{title}} (début : {{start_time}}, durée : {{duration}})"
-  program_crated: "programmation {{title}} créée"
+  program_in_conflict: "impossible de créer la nouvelle programmation, elle rentre en conflit avec %{title} (début : %{start_time}, durée : %{duration})"
+  program_crated: "programmation %{title} créée"
   is_recording: "Enregistrement en cours : "
 
   date:
@@ -73,35 +73,35 @@ fr:
       less_than_x_seconds:
         zero:  "moins d'une seconde"
         one:   "moins de 1 seconde"
-        other: "moins de {{count}} secondes"
+        other: "moins de %{count} secondes"
       x_seconds:
         one:   "1 seconde"
-        other: "{{count}} secondes"
+        other: "%{count} secondes"
       less_than_x_minutes:
         zero:  "moins d'une minute"
         one:   "moins de 1 minute"
-        other: "moins de {{count}} minutes"
+        other: "moins de %{count} minutes"
       x_minutes:
         one:   "1 minute"
-        other: "{{count}} minutes"
+        other: "%{count} minutes"
       about_x_hours:
         one:   "environ une heure"
-        other: "environ {{count}} heures"
+        other: "environ %{count} heures"
       x_days:
         one:   "1 jour"
-        other: "{{count}} jours"
+        other: "%{count} jours"
       about_x_months:
         one:   "environ un mois"
-        other: "environ {{count}} mois"
+        other: "environ %{count} mois"
       x_months:
         one:   "1 mois"
-        other: "{{count}} mois"
+        other: "%{count} mois"
       about_x_years:
         one:   "environ un an"
-        other: "environ {{count}} ans"
+        other: "environ %{count} ans"
       over_x_years:
         one:   "plus d'un an"
-        other: "plus de {{count}} ans"
+        other: "plus de %{count} ans"
     prompts:
       year:   "Année"
       month:  "Mois"
@@ -152,8 +152,8 @@ fr:
     errors:
       template:
         header: 
-          one: "Impossible d'enregistrer {{model}}: 1 erreur"
-          other: "Impossible d'enregistrer {{model}}: {{count}} erreurs."
+          one: "Impossible d'enregistrer %{model}: 1 erreur"
+          other: "Impossible d'enregistrer %{model}: %{count} erreurs."
         body: "Veuillez vérifier les champs suivants :"
       messages:
         inclusion: "n'est pas inclus(e) dans la liste"
@@ -163,15 +163,15 @@ fr:
         accepted: "doit être accepté(e)"
         empty: "doit être rempli(e)"
         blank: "doit être rempli(e)"
-        too_long: "est trop long (pas plus de {{count}} caractères)"
-        too_short: "est trop court (au moins {{count}} caractères)"
-        wrong_length: "ne fait pas la bonne longueur (doit comporter {{count}} caractères)"
+        too_long: "est trop long (pas plus de %{count} caractères)"
+        too_short: "est trop court (au moins %{count} caractères)"
+        wrong_length: "ne fait pas la bonne longueur (doit comporter %{count} caractères)"
         taken: "n'est pas disponible"
         not_a_number: "n'est pas un nombre"
-        greater_than: "doit être supérieur à {{count}}"
-        greater_than_or_equal_to: "doit être supérieur ou égal à {{count}}"
-        equal_to: "doit être égal à {{count}}"
-        less_than: "doit être inférieur à {{count}}"
-        less_than_or_equal_to: "doit être inférieur ou égal à {{count}}"
+        greater_than: "doit être supérieur à %{count}"
+        greater_than_or_equal_to: "doit être supérieur ou égal à %{count}"
+        equal_to: "doit être égal à %{count}"
+        less_than: "doit être inférieur à %{count}"
+        less_than_or_equal_to: "doit être inférieur ou égal à %{count}"
         odd: "doit être impair"
         even: "doit être pair"
